--- a/index.html
+++ b/index.html
@@ -6,23 +6,18 @@
     <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <!-- Счетчик сбитых банок -->
   <div class="count">Сбитых банок <strong>0</strong> шт.</div>
-
-  <!-- Таблица с банками -->
   <div class="table">
-    <div class="beer"></div>
-    <div class="beer"></div>
-    <div class="beer"></div>
-    <div class="beer"></div>
-    <div class="beer"></div>
+   <div class="beer"></div>
+   <div class="beer"></div>
+   <div class="beer"></div>
+   <div class="beer"></div>
+   <div class="beer"></div>
   </div>
-
-  <!-- Элементы для звука -->
   <audio class="shot" src="https://res.cloudinary.com/dovwumaes/video/upload/v1728826923/16557_1460656892_hz1zdl.mp3"></audio>
   <audio class="hit" src="https://res.cloudinary.com/dovwumaes/video/upload/v1728827048/zvon-uletayuschey-jestyanoy-banki-ot-pinka_sse3iz.mp3"></audio>
 
-  <!-- Прицел -->
+  <!-- Добавьте элемент прицела -->
   <div class="aim"></div>
 
   <!-- Подключение скрипта -->
